--- a/index.html
+++ b/index.html
@@ -2,9 +2,50 @@
 <html>
 <head>
     <title>E-Loop Gaming Studios</title>
+    <style>
+        body {
+            margin: 0;
+            background-color: #111315;
+            color: #e6e6e6;
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+        }
+
+        .container {
+            padding-top: 20vh;
+        }
+
+        h1 {
+            font-size: 3rem;
+            letter-spacing: 2px;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.2rem;
+            color: #aaaaaa;
+        }
+
+        .button {
+            display: inline-block;
+            margin-top: 30px;
+            padding: 12px 24px;
+            border: 1px solid #555;
+            color: #e6e6e6;
+            text-decoration: none;
+            transition: 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #222;
+        }
+    </style>
 </head>
-<body style="background-color:#111; color:white; text-align:center; font-family:sans-serif;">
-    <h1>E-Loop Gaming Studios</h1>
-    <p>Building thoughtful, system-driven games.</p>
+<body>
+    <div class="container">
+        <h1>E-Loop Gaming Studios</h1>
+        <p>Building thoughtful, system-driven games.</p>
+        <a href="#" class="button">View Our Game</a>
+    </div>
 </body>
 </html>
