--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <img src="logo.png" alt="E-Loop Logo" style="width:150px; margin-bottom:20px;">
         <h1>E-Loop Gaming Studios</h1>
         <p>Building thoughtful, system-driven games.</p>
-        <a href="#" class="button">View Our Game</a>
+        <a href="office-cards.html" class="button">View Our Game</a>
     </div>
 </body>
 </html>
+
 
