--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             margin: 0;
-            background-color: #111315;
+            background: linear-gradient(to bottom, #0f1216, #0b0d10);
             color: #e6e6e6;
             font-family: Arial, Helvetica, sans-serif;
             text-align: center;
@@ -50,5 +50,6 @@
     </div>
 </body>
 </html>
+
 
 
