--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         .container {
-            padding-top: 20vh;
+            padding-top: 25vh;
         }
 
         h1 {
@@ -39,17 +39,23 @@
         .button:hover {
             background-color: #222;
         }
+        .logo {
+            width: 280px;
+            max-width: 80%;
+            margin-bottom: 30px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="E-Loop Logo" style="width:300px; margin-bottom:20px;">
+        <img src="logo.png" alt="E-Loop Logo" class="logo">; margin-bottom:20px;">
         <h1>E-Loop Gaming Studios</h1>
         <p>Building thoughtful, system-driven games.</p>
         <a href="office-cards.html" class="button">View Our Game</a>
     </div>
 </body>
 </html>
+
 
 
 
