--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="E-Loop Logo" class="logo">;
+        <img src="logo.png" alt="E-Loop Logo" class="logo">
         <h1>E-Loop Gaming Studios</h1>
         <p>Building thoughtful, system-driven games.</p>
         <a href="office-cards.html" class="button">View Our Game</a>
     </div>
 </body>
 </html>
+
 
 
 
