--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
         <h1>E-Loop Gaming Studios</h1>
         <p>Building thoughtful, system-driven games.</p>
         <a href="office-cards.html" class="button">View Our Game</a>
+        <br><br>
+<a href="devlogs.html" class="button">Devlogs</a>
     </div>
 </body>
 </html>
+
 
 
 
