--- a/devlogs.html
+++ b/devlogs.html
@@ -65,6 +65,14 @@
                 This session focused on establishing foundational structure — both for the studio and the game itself.
                 The goal wasn’t feature expansion, but clarity and infrastructure.
             </p>
+            <div style="margin-top:40px;">
+                <img src="office-cards-screenshot.png" 
+                     alt="Office Cards Gameplay Screenshot"
+                     style="width:100%; max-width:900px; border:1px solid #333;">
+                <p style="color:#777; font-size:0.9rem; margin-top:10px;">
+                    Gameplay screenshot. Visual card art generated using AI tools.
+                </p>
+            </div>
 
             <p>
                 The studio website was launched at eloopgames.com, including domain configuration,
