--- a/devlogs.html
+++ b/devlogs.html
@@ -67,8 +67,8 @@
             </p>
             <div style="margin-top:40px;">
                 <img src="office-cards-screenshot.png" 
-                     alt="Office Cards Gameplay Screenshot"
-                     style="width:100%; max-width:900px; border:1px solid #333;">
+                 alt="Office Cards Gameplay Screenshot"
+                 style="width:100%; max-width:900px; border:1px solid #333; border-radius:8px;">
                 <p style="color:#777; font-size:0.9rem; margin-top:10px;">
                     Gameplay screenshot. Visual card art generated using AI tools.
                 </p>
