--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         .button:hover {
             background-color: #222;
         }
+        
         .logo {
             width: 280px;
             max-width: 80%;
@@ -54,9 +55,12 @@
         <a href="office-cards.html" class="button">View Our Game</a>
         <br><br>
 <a href="devlogs.html" class="button">Devlogs</a>
+<br><br>
+<a href="about.html" class="button">About</a>
     </div>
 </body>
 </html>
+
 
 
 
